--- a/interactive_projector.html
+++ b/interactive_projector.html
@@ -5,13 +5,6 @@
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
-    <script type="module">
-        import { animate } from "https://cdn.jsdelivr.net/npm/motion@10.16.3/+esm";
-        import { interpolate } from "https://cdn.jsdelivr.net/npm/flubber@0.4.2/+esm";
-
-        window.animate = animate;
-        window.interpolate = interpolate;
-    </script>
 </head>
 
 <body>
@@ -51,7 +44,7 @@
         }
 
         let wasOverlapping = false;
-        let interactionCooldown = false;
+        let fgBox = null;
 
         function callOnce() {
             if (interactionCooldown) return;
@@ -82,30 +75,49 @@
             }
         }
 
-
         //util functions
-        function throttle(func, delay) {
-            let lastCall = 0;
-            return (...args) => {
-                const now = Date.now();
-                if (now - lastCall >= delay) {
-                    lastCall = now;
-                    func(...args);
-                }
-            };
-        }
-
-        function hideElement(el, status) {
+        function hideElement(el, shouldHide, isAnimated) {
             if (!el) return;
-            el.style.transition = "transform 1.0s ease";
-            el.style.display = status ? "none" : "block";
+
+            if (isAnimated) {
+                if (shouldHide) {//fadeOUT
+                    el.style.opacity = 1;
+                    applyTransition(el, "opacity", "0.6s", "ease", "0.3s");
+
+                    // animate to zero
+                    requestAnimationFrame(() => {
+                        el.style.opacity = 0;
+                    });
+
+                    // when done, actually remove it from flow (performance)
+                    el.addEventListener("transitionend", function _onFadeOut() {
+                        el.style.display = "none";
+                        el.removeEventListener("transitionend", _onFadeOut);
+                    });
+
+                } else {//fadeIN
+                    //bring back to flow
+                    el.style.display = "block";
+
+                    //set opacity to zero n apply transition on it
+                    el.style.opacity = 0;
+                    applyTransition(el, "opacity", "0.6s", "ease", "0.3s");
+
+                    //now animate to full opacity
+                    requestAnimationFrame(() => {
+                        el.style.opacity = 1;
+                    });
+                }
+            } else { //static execution (no animation)
+                el.style.display = shouldHide ? "none" : "block";
+            }
         }
 
-        function applyTransition(el, propertiesList, duration = "0.6s", easing = "ease") {
+        function applyTransition(el, propertiesList, duration = "0.6s", easing = "ease", delay = "0s") {
             if (!el) return;
 
             const bananaList = Array.isArray(propertiesList) ? propertiesList : [propertiesList];
-            const transitionString = bananaList.map(banana => `${banana} ${duration} ${easing}`).join(", ");
+            const transitionString = bananaList.map(banana => `${banana} ${duration} ${easing} ${delay}`).join(", ");
 
             el.style.transition = transitionString;
         }
@@ -126,7 +138,9 @@
                     userImg: "67e9f5d9c5a5ce602fac3f88",
                     userName: "67e9f5d928c042804157b29a",
                     closeBtn: "67eacf150c89adeaeb487c02",
-                    actionBtn: "67eacf1511d353e4afae09d2"
+                    //closeBtnDisabled: "67eacd2f54be5d50b17f6a42",
+                    actionBtn: "67eacf1511d353e4afae09d2",
+                    //actionBtnDisabled: "67eace502229b047344ff591"
                 };
 
                 // DOM references
@@ -147,7 +161,10 @@
                     userImg: this._queryShape(this.ids.userImg, 'ellipse[mask]'),
 
                     closeBtn: this._queryButton(this.ids.closeBtn),
-                    actionBtn: this._queryButton(this.ids.actionBtn)
+                    //closeBtnDisabled: this._queryShape(this.ids.closeBtnDisabled),
+
+                    actionBtn: this._queryButton(this.ids.actionBtn),
+                    //actionBtnDisabled: this._queryShape(this.ids.actionBtnDisabled)
                 };
 
                 this.originX = 0;
@@ -201,7 +218,11 @@
                 applyTransition(el, "transform");
             }
 
-            _setSvgDimensions(containerEl, svg, width, height) {
+            resizeSvgContainer(containerEl, width, height, radius) {
+                if (!containerEl) return;
+                const svg = containerEl.querySelector("svg");
+                if (!svg) return;
+
                 const viewBox = `0 0 ${width} ${height}`;
                 svg.setAttribute("viewBox", viewBox);
                 svg.setAttribute("preserveAspectRatio", "none");
@@ -213,75 +234,21 @@
                 containerEl.style.width = `${width}px`;
                 containerEl.style.height = `${height}px`;
                 containerEl.style.transform = "scale(1)";
-                //applyTransition(containerEl, ["width", "height"]);
-            }
+                applyTransition(containerEl, ["width", "height"]);
 
-            _morphPath(pathEl, oldD, newD, options = {}) {
-                const {
-                    duration = 600, // in ms
-                    maxSegmentLength = 2
-                } = options;
-
-                try {
-                    const interpolator = interpolate(oldD, newD, { maxSegmentLength });
-
-                    const start = performance.now();
-
-                    function tick(now) {
-                        const elapsed = now - start;
-                        const progress = Math.min(elapsed / duration, 1);
-
-                        const currentD = interpolator(progress);
-                        pathEl.setAttribute("d", currentD);
-
-                        if (progress < 1) {
-                            requestAnimationFrame(tick);
-                        }
-                    }
-
-                    requestAnimationFrame(tick);
-                } catch (e) {
-                    console.warn("ERROR: morphing failed, fallback to skip animation");
-                    console.error(e);
-                    pathEl.setAttribute("d", newD);
-                }
-            }
-
-            resizeSvgContainer(containerEl, width, height, radius) {
-                console.log(`   1. Entered reSizeSvg(), attempting to get containerEl.`);
-                if (!containerEl) return;
-                console.log(`   2. Got containerEl successfully, attempting to query svg tag within.`);
-                const svg = containerEl.querySelector("svg");
-                if (!svg) return;
-                console.log(`   3. Got svg successfully, calling setSvgDimensions.`);
-
-                this._setSvgDimensions(containerEl, svg, width, height);
-
-                console.log(`   4. Setted dimensions successfully successfully, calling generating newD path.`);
                 const newD = this._generateNewD(width, height, radius);
-                console.log(`   5. Generated newD path successfully, creating selectors array.`);
 
-                const selectors = [
-                    "defs mask path",
-                    "defs clipPath path",
-                    "path[mask]",
-                    "path[clip-path]"
-                ];
-                console.log(`   6. Created array successfully, entering loop.`);
+                const maskPath = svg.querySelector("defs mask path");
+                if (maskPath) maskPath.setAttribute("d", newD);
 
-                for (const selector of selectors) {
-                    console.log(`       1# Entered [${selector}], querying path.`);
-                    const path = svg.querySelector(selector);
-                    if (!path) continue;
-                    console.log(`       2# Queried path successfully, getting oldD.`);
+                const clipPath = svg.querySelector("defs clipPath path");
+                if (clipPath) clipPath.setAttribute("d", newD);
 
-                    const oldD = path.getAttribute("d");
-                    if (!oldD || oldD === newD) continue;
-                    console.log(`       3# Got oldD successfully, calling morphPath().`);
+                const maskedPath = svg.querySelector("path[mask]");
+                if (maskPath) maskedPath.setAttribute("d", newD);
 
-                    this._morphPath(path, oldD, newD);
-                    console.log(`       4# Called morphPath successfully, ${selector} is complete.`);
-                }
+                const clippedPath = svg.querySelector("path[clip-path]");
+                if (clippedPath) clippedPath.setAttribute("d", newD);
             }
 
             resetTransform(el) {
@@ -376,48 +343,60 @@
             }
 
             _hidePictureOnInit() {
-                hideElement(this.pictureEl, true);
+                hideElement(this.pictureEl, true, false);
             }
 
             activate() {
-                console.log(`=> ACTIVATING ${this.id}.`);
+                console.log(`ACTIVATING ${this.id} attempting to get projector singleton`);
                 //get (or create) the projector obj
                 const projector = new Projector();
+                console.log(`ACTIVATING ${this.id} projector successfully created, moving to create el alias`);
                 //alias (for readability)
                 const el = projector.elements;
+                console.log(`ACTIVATING ${this.id} alias successfully created, moving to call setState`);
 
                 //switches the projector to appear on (visual effect)
                 projector.setProjectorState(true, this.isActionable);
+                console.log(`ACTIVATING ${this.id} settedState, moving to call mediafactory`);
                 //sets the projector size and positioning based on the mediaType (of the designAsset)
                 const media = MediaFactory(this.mediaType);
+                console.log(`ACTIVATING ${this.id} called mediafactory, moving to call activate`);
                 media.activate();
+                console.log(`ACTIVATING ${this.id} called activate, moving to call hideElement`);
 
                 //fills in the projector with the design asset (visual effect)
-                hideElement(this.pictureEl, false);
+                hideElement(this.pictureEl, false, true);
+                console.log(`ACTIVATING ${this.id} called hideElement, moving to change text and titles`);
 
                 //sets the text based on the designAsset
                 projector.setText(el.title, this.title);
                 projector.setText(el.text, this.text);
-                console.log(`=> ACTIVATING ${this.id}, returning.`);
+                console.log(`ACTIVATING ${this.id} changed text and titles successfully, returning.`);
             }
 
             deactivate() {
-                console.log(`=> DEACTIVATING ${this.id}.`);
+                console.log(`DEACTIVATING ${this.id} attempting to get projector singleton`);
                 const projector = new Projector();
+                console.log(`DEACTIVATING ${this.id} projector successfully created, moving to create el alias`);
                 const el = projector.elements;
 
+                console.log(`DEACTIVATING ${this.id} alias successfully created, moving to call setState`);
                 projector.setProjectorState(false, false);
+                console.log(`DEACTIVATING ${this.id} settedState, moving to call mediafactory`);
 
                 const media = MediaFactory(this.mediaType);
+                console.log(`DEACTIVATING ${this.id} called mediafactory, moving to call deactivate`);
                 media.deactivate();
+                console.log(`DEACTIVATING ${this.id} called deactivate, moving to call hideElement`);
 
-                hideElement(this.pictureEl, true);
+                hideElement(this.pictureEl, true, false); //change (need to add delay to movement??)
+                console.log(`DEACTIVATING ${this.id} called hideElement, moving to change text and titles`);
 
                 const defaultTitle = "abra cada bra";
                 const defaultText = "moooooove something inside the super special magical projector pro plus R/m skibidi fast. COMES WITH..? YOU/ gusessed it ArITFICIAL intelligence.";
                 projector.setText(el.title, defaultTitle);
                 projector.setText(el.text, defaultText);
-                console.log(`=> DEACTIVATING ${this.id}, returning.`);
+                console.log(`DEACTIVATING ${this.id} changed text and titles successfully, returning.`);
             }
         }
 
@@ -470,7 +449,7 @@
                 projector.resizeSvgContainer(el.foreground, 177, 314, 15);
 
                 //PROJECTOR: hide
-                hideElement(el.hintText, true);
+                hideElement(el.hintText, true, false);
 
                 //PROJECTOR: move
                 //position bg
@@ -511,7 +490,7 @@
                 projector.resizeSvgContainer(el.background, 298, 355, 15);
                 projector.resizeSvgContainer(el.foreground, 281, 281, 15);
 
-                hideElement(el.hintText, false);
+                hideElement(el.hintText, false, true);
             }
         }
 
@@ -529,44 +508,46 @@
                 const projector = new Projector();
                 const el = projector.elements;
 
-                //projector.setOrigin(0, 0);
+                projector.setOrigin(0, 0);
 
                 //TEXT: position
-                // projector.applyTransform(el.title, 62, 0);
-                // projector.applyTransform(el.text, 62, 0);
+                projector.applyTransform(el.title, 62, 0);
+                projector.applyTransform(el.text, 62, 0);
 
                 //PROJECTOR: resize 
                 projector.resizeSvgContainer(el.background, 517, 355, 15);
                 projector.resizeSvgContainer(el.foreground, 499, 281, 15);
 
                 //PROJECTOR: hide
-                // hideElement(el.hintText, true);
+                hideElement(el.hintText, true, false);
 
                 //PROJECTOR: move
-                // projector.applyTransform(el.background, -63, 0);
-                // projector.applyTransform(el.foreground, -62.99, 0);
-                // projector.applyTransform(el.userImg, -63.99, 0);
-                // projector.applyTransform(el.userName, -63.99, 0);
-                // projector.applyTransform(el.closeBtn, 156, 0);
-                // projector.applyTransform(el.actionBtn, 156, 0);
+                projector.applyTransform(el.background, -63, 0);
+                projector.applyTransform(el.foreground, -62.99, 0);
+                projector.applyTransform(el.userImg, -63.99, 0);
+                projector.applyTransform(el.userName, -63.99, 0);
+                projector.applyTransform(el.closeBtn, 156, 0);
+                projector.applyTransform(el.actionBtn, 156, 0);
+                //projector.applyTransform(el.actionBtnDisabled, 156, 0);
             }
             deactivate() {
                 const projector = new Projector();
                 const el = projector.elements;
 
-                // projector.resetTransform(el.title);
-                // projector.resetTransform(el.text);
+                projector.resetTransform(el.title);
+                projector.resetTransform(el.text);
                 projector.resetTransform(el.background);
                 projector.resetTransform(el.foreground);
-                // projector.resetTransform(el.userImg);
-                // projector.resetTransform(el.userName);
-                // projector.resetTransform(el.closeBtn);
-                // projector.resetTransform(el.actionBtn);
+                projector.resetTransform(el.userImg);
+                projector.resetTransform(el.userName);
+                projector.resetTransform(el.closeBtn);
+                projector.resetTransform(el.actionBtn);
+                //projector.resetTransform(el.actionBtnDisabled);
 
                 projector.resizeSvgContainer(el.background, 298, 355, 15);
                 projector.resizeSvgContainer(el.foreground, 281, 281, 15);
 
-                // hideElement(el.hintText, false);
+                hideElement(el.hintText, false, true);
             }
         }
 
@@ -637,10 +618,9 @@
         const designAssets = rawData.map(createDesignAssetFromData);
 
         //listener (optimize??)
-        const throttledCallOnce = throttle(callOnce, 100);
-        document.addEventListener("mousemove", throttledCallOnce);
-        document.addEventListener("touchmove", throttledCallOnce);
-
+        $(document).on('mousemove touchmove', function () {
+            callOnce();
+        });
         //initial call (upon page load)
         callOnce();
     </script>
