--- a/interactive_projector.html
+++ b/interactive_projector.html
@@ -11,20 +11,15 @@
     <script>
 
         //[*] stuff left to work on:
-        // 1. adding the tweaks. refactoring the code (if needed). need an overloaded hide/show function version for the tweaks array (maybe embed a sequential animation within it).
+        // 1. adding logic to the buttons.
         // 2. storyMedia missing additional randTime text under userName (missing from og design).
+        // 3. adding the tweaks. refactoring the code (if needed). need an overloaded hide/show function version for the tweaks array (maybe embed a sequential animation within it).
+        // 4. special view for when more than one El is showing.
 
         //{*} extra stuff:
         // -  way too many calls happening (either proof with w/ a callonce flag check function (cheap soln i feel) or optimize listeners to be smarter.)
         // -  optimizing listeners.
         // -  rethink factory + singleton pattern for mediatypes. overkill or keep it?
-
-        rmWidgetsClassNames = {
-            default: "rmwidget",
-            textV3: "widget-text-v3",
-            shape: "widget-shape",
-            button: "widget-button"
-        }
 
         function isOverlapping(elementOrRect1, elementOrRect2) {
             const rect1 = elementOrRect1.getBoundingClientRect();
@@ -48,17 +43,26 @@
 
             const manager = new DesignAssetManager();
             const activeAsset = manager.getCurrentTarget();
+            if (!activeAsset) return;
+            const activeAssetEl = activeAsset.assetEl;
+            if (!activeAssetEl) return;
 
-            const isCurrentlyOverlapping = activeAsset && isOverlapping(activeAsset.assetEl, el.foreground);
+            const isCurrentlyOverlapping = isOverlapping(activeAssetEl, el.foreground);
 
             if (isCurrentlyOverlapping !== wasOverlapping) {
                 interactionCooldown = true; // prevent overlap checking
 
                 if (isCurrentlyOverlapping) {
+                    //hide el
+                    hideElement(activeAssetEl, true, projector.ANIMATIONS.OPACITY_FADE);
+
+                    //activate
                     activeAsset.activate();
-                } else if (activeAsset) {
-                    activeAsset.deactivate();
-                }
+                } 
+                
+                // else if (activeAsset) { //deprecated (will clean soon)
+                //     activeAsset.deactivate();
+                // }
 
                 wasOverlapping = isCurrentlyOverlapping;
 
@@ -70,13 +74,13 @@
         }
 
         //util functions
-        function hideElement(el, shouldHide, isAnimated) {
+        function hideElement(el, shouldHide, transitionString) {
             if (!el) return;
 
-            if (isAnimated) {
+            if (transitionString) {
                 if (shouldHide) {//fadeOUT
                     el.style.opacity = 1;
-                    applyTransition(el, "opacity", "0.6s", "ease", "0.3s");
+                    el.style.transition = transitionString;
 
                     // animate to zero
                     requestAnimationFrame(() => {
@@ -95,7 +99,7 @@
 
                     //set opacity to zero n apply transition on it
                     el.style.opacity = 0;
-                    applyTransition(el, "opacity", "0.6s", "ease", "0.3s");
+                    el.style.transition = transitionString;
 
                     //now animate to full opacity
                     requestAnimationFrame(() => {
@@ -107,12 +111,15 @@
             }
         }
 
-        function applyTransition(el, propertiesList, duration = "0.6s", easing = "ease", delay = "0s") {
-            if (!el) return;
-
+        function getTransitionString(propertiesList, duration = "0.6s", easing = "ease", delay = "0s") {
             const bananaList = Array.isArray(propertiesList) ? propertiesList : [propertiesList];
             const transitionString = bananaList.map(banana => `${banana} ${duration} ${easing} ${delay}`).join(", ");
 
+            return transitionString;
+        }
+
+        function setTransition(el, transitionString) {
+            if (!el) return;
             el.style.transition = transitionString;
         }
 
@@ -120,10 +127,8 @@
             constructor() {
                 if (Projector.instance) return Projector.instance;
 
-                this.rmWidgetsClassNames = rmWidgetsClassNames;
-
                 //constants: widget IDs
-                this.ids = {
+                this.IDS = {
                     title: "67dd66c63a64f2281b928afb",
                     text: "67d47a32802660506c48d088",
                     projectorBackground: "67e9f5d805137a26916fce6f",
@@ -132,74 +137,80 @@
                     userImg: "67e9f5d9c5a5ce602fac3f88",
                     userName: "67e9f5d928c042804157b29a",
                     closeBtn: "67eacf150c89adeaeb487c02",
-                    //closeBtnDisabled: "67eacd2f54be5d50b17f6a42",
-                    actionBtn: "67eacf1511d353e4afae09d2",
-                    //actionBtnDisabled: "67eace502229b047344ff591"
+                    actionBtn: "67eacf1511d353e4afae09d2"
                 };
 
-                // DOM references
+                //DOM references
                 this.elements = {
-                    title: this._queryText(this.ids.title),
-                    text: this._queryText(this.ids.text),
-                    hintText: this._queryText(this.ids.hintText),
-                    userName: this._queryText(this.ids.userName),
+                    title: this._queryElement(this.IDS.title),
+                    text: this._queryElement(this.IDS.text),
+                    hintText: this._queryElement(this.IDS.hintText),
+                    userName: this._queryElement(this.IDS.userName),
 
-                    background: this._queryShape(this.ids.projectorBackground),
-                    backgroundFill: this._queryShape(this.ids.projectorBackground, 'path[mask]'),
-                    backgroundOutline: this._queryShape(this.ids.projectorBackground, 'path[clip-path]'),
+                    background: this._queryElement(this.IDS.projectorBackground),
+                    backgroundFill: this._queryElement(this.IDS.projectorBackground, 'path[mask]'),
+                    backgroundOutline: this._queryElement(this.IDS.projectorBackground, 'path[clip-path]'),
 
-                    foreground: this._queryShape(this.ids.projectorForeground),
-                    foregroundFill: this._queryShape(this.ids.projectorForeground, 'path[mask]'),
-                    foregroundOutline: this._queryShape(this.ids.projectorForeground, 'path[clip-path]'),
+                    foreground: this._queryElement(this.IDS.projectorForeground),
+                    foregroundFill: this._queryElement(this.IDS.projectorForeground, 'path[mask]'),
+                    foregroundOutline: this._queryElement(this.IDS.projectorForeground, 'path[clip-path]'),
 
-                    userImg: this._queryShape(this.ids.userImg, 'ellipse[mask]'),
+                    userImg: this._queryElement(this.IDS.userImg, 'ellipse[mask]'),
 
-                    closeBtn: this._queryButton(this.ids.closeBtn),
-                    //closeBtnDisabled: this._queryShape(this.ids.closeBtnDisabled),
-
-                    actionBtn: this._queryButton(this.ids.actionBtn),
-                    //actionBtnDisabled: this._queryShape(this.ids.actionBtnDisabled)
+                    closeBtn: this._queryElement(this.IDS.closeBtn),
+                    actionBtn: this._queryElement(this.IDS.actionBtn)
                 };
 
-                this.originX = 0;
-                this.originY = 0;
+                //constants: animations
+                this.ANIMATIONS = {
+                    OPACITY_FADE: getTransitionString("opacity", "0.6s", "ease", "0.3s")
+                }
+
+                this.projectorOriginX = 0;
+                this.projectorOriginY = 0;
+
+                if (this.elements.closeBtn) {
+                    this.elements.closeBtn.addEventListener("click", () => this.resetProjector());
+                }
 
                 Projector.instance = this;
             }
 
             //helpers
-            _queryText(id) {
-                return document.querySelector(`div.${this.rmWidgetsClassNames.default}.${this.rmWidgetsClassNames.textV3}[data-id="${id}"]`);
-            }
-
-            _queryShape(id, child = "") {
-                return document.querySelector(`div.${this.rmWidgetsClassNames.default}.${this.rmWidgetsClassNames.shape}[data-id="${id}"] ${child}`);
-            }
-
-            _queryButton(id) {
-                return document.querySelector(`div.${this.rmWidgetsClassNames.default}.${this.rmWidgetsClassNames.button}[data-id="${id}"]`);
+            _queryElement(id, child = "") {
+                const baseSelector = `div[data-id="${id}"]`;
+                return document.querySelector(child ? `${baseSelector} ${child}` : baseSelector);
             }
 
             //methods
             setOrigin(x, y) {
-                this.originX = x;
-                this.originY = y;
+                this.projectorOriginX = x;
+                this.projectorOriginY = y;
             }
 
+            //transFORM not transition
             applyTransform(el, offsetX = 0, offsetY = 0) {
                 if (!el) return;
-                const x = this.originX + offsetX;
-                const y = this.originY + offsetY;
+                const x = this.projectorOriginX + offsetX;
+                const y = this.projectorOriginY + offsetY;
                 el.style.transform = `translate(${x}px, ${y}px)`;
-                applyTransition(el, "transform");
+                const transitionStr = getTransitionString('transform');
+                setTransition(el, transitionStr);
+            }
+
+            setTransform(el, topValue, leftValue) {
+                if (!el) return;
+                el.style.top = `${topValue}px`;
+                el.style.left = `${leftValue}px`;
             }
 
             resetTransform(el) {
                 if (!el) return;
-                applyTransition(el, "transform");
+                const transitionStr = getTransitionString('transform');
+                setTransition(el, transitionStr);
                 el.style.transform = "translate(0, 0)";
             }
-            
+
             _generateNewD(width, height, radius) {
                 const r = radius;
                 const w = width;
@@ -218,9 +229,9 @@
             `.replace(/\s+/g, ' ').trim();
             }
 
-            resizeSvgContainer(containerEl, width, height, radius) {
-                if (!containerEl) return;
-                const svg = containerEl.querySelector("svg");
+            resizeSvgContainer(el, width, height, radius) {
+                if (!el) return;
+                const svg = el.querySelector("svg");
                 if (!svg) return;
 
                 const viewBox = `0 0 ${width} ${height}`;
@@ -231,10 +242,11 @@
                 svg.style.width = `${width}px`;
                 svg.style.height = `${height}px`;
 
-                containerEl.style.width = `${width}px`;
-                containerEl.style.height = `${height}px`;
-                containerEl.style.transform = "scale(1)";
-                applyTransition(containerEl, ["width", "height"]);
+                el.style.width = `${width}px`;
+                el.style.height = `${height}px`;
+                el.style.transform = "scale(1)";
+                const transitionStr = getTransitionString(["width", "height"]);
+                setTransition(el, transitionStr);
 
                 const newD = this._generateNewD(width, height, radius);
 
@@ -300,6 +312,22 @@
                     this._setButtonState(el.closeBtn, false);
                 }
             }
+
+            resetProjector() {
+                const manager = new DesignAssetManager();
+                const activeAsset = manager.getCurrentTarget();
+                if (!activeAsset) return;
+
+                const activeAssetEl = activeAsset.assetEl;
+                if (!activeAssetEl) return;
+
+                this.applyTransform(activeAssetEl, activeAssetEl.assetOriginX, activeAssetEl.assetOriginY);
+                hideElement(activeAssetEl, false, this.ANIMATIONS.OPACITY_FADE);
+                //this.setTransform(activeAssetEl, activeAssetEl.assetOriginX, activeAssetEl.assetOriginY); //check can we edit left top after el no longer in flow (display set to none).
+
+                activeAsset.deactivate();
+                manager.clearTarget();
+            }
         }
 
         class DesignAsset {
@@ -312,8 +340,10 @@
             * @param {string[]} tweakDataId
             * @param {MediaType} mediaType
             */
-            constructor(id, title, text, pictureDataId, isActionable, tweakDataId, mediaType) {
+            constructor(id, originX, originY, title, text, pictureDataId, isActionable, tweakDataId, mediaType) {
                 this.id = id;
+                this.assetOriginX = originX;
+                this.assetOriginY = originY;
                 this.title = title;
                 this.text = text;
                 this.pictureDataId = pictureDataId;
@@ -554,6 +584,8 @@
         function createDesignAssetFromData(data) {
             return new DesignAsset(
                 data.id,
+                data.assetOriginX,
+                data.assetOriginY,
                 data.title,
                 data.text,
                 data.pictureDataId,
@@ -566,6 +598,8 @@
         const rawData = [
             {
                 id: "67d47af15a2bcb42018765bb", //purple
+                assetOriginX: 4844,
+                assetOriginY: 598,
                 title: "Announcing HTU CC",
                 text: "So, in here announced the Al-Hussein Technical University Coding Competition through a super amazing really cool post. It was amazing and I loved it of course becasue I designed it, I know amazing right?",
                 pictureDataId: "67f95cc570965b325e806672",
@@ -575,6 +609,8 @@
             },
             {
                 id: "67d47b040af04cc131e275e5", //cyan
+                assetOriginX: 4841,
+                assetOriginY: 692,
                 title: "crazy random stuff",
                 text: "I ran out of brain rot so ur just gunna have tpo do with this shishishsis for now its my version of lorem ipsum, way better right? right? i love ketchup, its just so good. also i think im growing an armenian shawerma addiction.",
                 pictureDataId: "67f95ceca23604ff63b6c116",
@@ -583,6 +619,8 @@
             },
             {
                 id: "67f95cac00fee003fa29b2f8", //pink
+                assetOriginX: 4840.99,
+                assetOriginY: 785.99,
                 title: "okay a slideshow this time",
                 text: "i just need to change this text really wuick. yknow lorem ipsum would probably be faster but i need changing text each time to fully assess my design and prototype it. excellent usability testing process uhuh uhuh.",
                 pictureDataId: "67f95d08231d4a07807e3c22",
