- updated overlap logic + refactored transition to better suit new logic + general clean up

--- a/interactive_projector.html
+++ b/interactive_projector.html
@@ -384,7 +384,7 @@
                 media.activate();
 
                 //fills in the projector with the design asset (visual effect)
-                hideElement(this.pictureEl, false, true);
+                hideElement(this.pictureEl, false, projector.ANIMATIONS.OPACITY_FADE);
 
                 //sets the text based on the designAsset
                 projector.setText(el.title, this.title);
